CMBSandbox4/src/objects/Referral__c.object
<CustomObject>
    <description>This object is to indicate who i referred to whoo. For compensation and follow up</description>
    <fields>
        <fullName>Account_Referred__c</fullName>
        <label>Account Referred</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <referenceTo>App__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Referral</label>
    <nameField>
        <label>Referral  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>